add jupyter notebook with examples

--- a/detect_cars.ipynb
+++ b/detect_cars.ipynb
@@ -94,6 +94,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Image  - own function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functions as fct\n",
+    "net_type = 'mb1-ssd'\n",
+    "model_path = './models/carspls/mb1-ssd-Epoch-537-Loss-0.664390986164411.pth'\n",
+    "label_path = './models/carspls/labels.txt'\n",
+    "image_path = './lando-norris-mclaren-mcl35m-1.png'\n",
+    "class_names = [name.strip() for name in open(label_path).readlines()]\n",
+    "fct.predict_image(net_type, model_path, label_path, image_path, './output_image.jpg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Video"
    ]
   },
@@ -200,7 +222,7 @@
     "                        1,  # font scale\n",
     "                        (255, 0, 255),\n",
     "                        2)  # line type\n",
-    "        cv2.imshow('video', orig_image)\n",
+    "        # cv2.imshow('video', orig_image)\n",
     "        out.write(orig_image)\n",
     "        fps = cap.get(cv2.CAP_PROP_FPS)\n",
     "        print ('FPS : {0}'.format(fps))\n",
@@ -211,6 +233,27 @@
     "cap.release()\n",
     "out.release()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Video  - own function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functions as fct\n",
+    "net_type = 'mb1-ssd'\n",
+    "model_path = './models/carspls/mb1-ssd-Epoch-537-Loss-0.664390986164411.pth'\n",
+    "label_path = './models/carspls/labels.txt'\n",
+    "video_file = './Screencast from 23.05.2024 21_30_33.mp4'\n",
+    "fct.predict_video(net_type, model_path, label_path, video_file, './output.mp4')"
    ]
   }
  ],
